Adds mentors fixes

--- a/source/sass/base/base.scss
+++ b/source/sass/base/base.scss
@@ -14,3 +14,14 @@ img {
   max-width: 100%;
   height: auto;
 }
+
+a {
+  text-decoration: none;
+}
+
+// :root {
+//   --main-font: "Oswald";
+// }
+
+// В блоках
+// var(--main-font)
