--- a/source/sass/blocks/main-nav.scss
+++ b/source/sass/blocks/main-nav.scss
@@ -1,10 +1,24 @@
+@use "../mixins.scss" as *;
+
 .main-nav {
   display: flex;
   flex-direction: column;
+  align-items: center;
+  gap: 46px;
 }
 
 .main-nav__link {
-  // @include link-reset;
+  @include link-reset;
   font-size: 20px;
   line-height: 20px;
+  text-transform: uppercase;
+  color: #000000;
+}
+
+.main-nav__toggle {
+  cursor: pointer;
+
+  &--hidden {
+    display: none;
+  }
 }
