Adds footer stylization

--- a/source/sass/base/base.scss
+++ b/source/sass/base/base.scss
@@ -12,6 +12,7 @@ html {
 body {
   display: flex;
   flex-direction: column;
+  font-family: "Oswald", "Arial", sans-serif;
   min-height: 100%;
   width: 320px;
   margin: 0;
