--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -12,5 +12,6 @@
 @use "blocks/main-nav.scss";
 @use "blocks/nav-closed.scss";
 @use "blocks/main-container.scss";
+@use "blocks/invite-dealers.scss";
 @use "blocks/footer.scss";
 @use "blocks/social.scss";
