--- a/source/sass/base/base.scss
+++ b/source/sass/base/base.scss
@@ -14,6 +14,7 @@ body {
   flex-direction: column;
   font-family: "Oswald", "Arial", sans-serif;
   font-weight: 400;
+  color: #000000;
   min-height: 100%;
   width: 320px;
   margin: 0;
