Adds hero stlization

--- a/source/sass/base/base.scss
+++ b/source/sass/base/base.scss
@@ -31,8 +31,6 @@ a {
 }
 
 :root {
+  --primary-font: "Oswald", "Arial", sans-serif;
   --secondary-font: "Lato", "Arial", sans-serif;
 }
-
-// В блоках
-// var(--main-font)
