--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -5,9 +5,11 @@
 // Блоки
 @use "blocks/header.scss";
 @use "blocks/logo.scss";
+@use "blocks/button.scss";
 @use "blocks/main-nav.scss";
 @use "blocks/nav-closed.scss";
 @use "blocks/main-container.scss";
+@use "blocks/hero.scss";
 @use "blocks/example.scss";
 @use "blocks/invite-dealers.scss";
 @use "blocks/footer.scss";
