Adds nutrition-program stylization

--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -10,6 +10,9 @@
 @use "blocks/nav-closed.scss";
 @use "blocks/main-container.scss";
 @use "blocks/hero.scss";
+@use "blocks/nutrition-program.scss";
+@use "blocks/diet-card.scss";
+@use "blocks/advantages.scss";
 @use "blocks/example.scss";
 @use "blocks/invite-dealers.scss";
 @use "blocks/footer.scss";
