--- a/source/sass/blocks/invite-dealers.scss
+++ b/source/sass/blocks/invite-dealers.scss
@@ -3,6 +3,10 @@
 .invite-dealers {
   display: flex;
   flex-direction: column;
+
+  &--secondary {
+    background-color: #f2f2f2;
+  }
 }
 
 .invite-dealers__wrapper {
