--- a/source/sass/blocks/product-card.scss
+++ b/source/sass/blocks/product-card.scss
@@ -17,6 +17,7 @@
 
   &--show-more {
     display: flex;
+    flex-wrap: wrap;
     flex-direction: column;
     align-items: center;
     row-gap: 0;
@@ -38,6 +39,7 @@
 
   &--additional {
     display: flex;
+    flex-wrap: wrap;
     flex-direction: column;
     align-items: stretch;
     row-gap: 14px;
