--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -23,3 +23,7 @@
 @use "blocks/product-card.scss";
 @use "blocks/catalog-additional.scss";
 @use "blocks/promotion.scss";
+
+//Блоки form
+@use "blocks/form-container.scss";
+@use "blocks/form.scss";
