--- a/source/sass/base/base.scss
+++ b/source/sass/base/base.scss
@@ -34,3 +34,17 @@ a {
   --primary-font: "Oswald", "Arial", sans-serif;
   --secondary-font: "Lato", "Arial", sans-serif;
 }
+
+.visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+  white-space: nowrap;
+  -webkit-clip-path: inset(100%);
+          clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  overflow: hidden;
+}
