--- a/source/sass/blocks/hero.scss
+++ b/source/sass/blocks/hero.scss
@@ -2,6 +2,7 @@
 
 .hero {
   display: flex;
+  flex-wrap: wrap;
   flex-direction: column;
   color: #ffffff;
   position: relative;
@@ -45,6 +46,7 @@
 
 .hero__decor-wrapper {
   display: flex;
+  flex-wrap: wrap;
   justify-content: flex-end;
   flex-direction: column;
   padding: 138px 20px 0;
