Adds arguments in mixin and fixes some bugs

--- a/source/sass/blocks/catalog.scss
+++ b/source/sass/blocks/catalog.scss
@@ -10,9 +10,7 @@
 }
 
 .catalog__title {
-  @include site-title;
+  @include site-title(36px, 36px);
   margin-top: 27px;
   margin-bottom: 41px;
-  font-size: 36px;
-  line-height: 36px;
 }
