--- a/source/sass/blocks/catalog-additional.scss
+++ b/source/sass/blocks/catalog-additional.scss
@@ -9,7 +9,5 @@
 }
 
 .catalog-additional__title {
-  @include site-title;
-  font-size: 24px;
-  line-height: 24px;
+  @include site-title(24px, 24px);
 }
