--- a/source/sass/blocks/diet-card.scss
+++ b/source/sass/blocks/diet-card.scss
@@ -43,11 +43,9 @@
 }
 
 .diet-card__title {
-  @include site-title;
+  @include site-title(24px, 37px);
   margin-left: 91px;
   margin-bottom: 29px;
-  font-size: 24px;
-  line-height: 37px;
 }
 
 .diet-card__intro {
@@ -56,8 +54,6 @@
 }
 
 .diet-card__link {
-  @include site-title;
+  @include site-title(16px, 16px);
   color: #000000;
-  font-size: 16px;
-  line-height: 16px;
 }
