--- a/source/sass/blocks/form.scss
+++ b/source/sass/blocks/form.scss
@@ -34,7 +34,7 @@
 }
 
 .form__label {
-  @include site-title;
+  @include site-title(16px, 18px);
   font-size: 16px;
   line-height: 18px;
 }
@@ -49,22 +49,18 @@
 }
 
 .form__title {
-  @include site-title;
+  @include site-title(24px, 26px);
   padding-right: 93px;
-  font-size: 24px;
-  line-height: 26px;
   margin-bottom: 35px;
 }
 
 .form__comment {
-  @include site-title;
+  @include site-title(16px, 18px);
   padding: 10px 12px 125px 15px;
   font-family: inherit;
   border: none;
   text-transform: uppercase;
   color: #444444;
-  font-size: 16px;
-  line-height: 18px;
 }
 
 .form__footnote {
