Fixes paths of background images

--- a/source/sass/blocks/diet-card.scss
+++ b/source/sass/blocks/diet-card.scss
@@ -24,7 +24,7 @@
       height: 50px;
       top: 21px;
       left: 29px;
-      background: url("../../img/icons/slim-icon.svg") no-repeat;
+      background: url("../img/icons/slim-icon.svg") no-repeat;
       content: "";
     }
   }
@@ -36,7 +36,7 @@
       height: 28px;
       top: 35px;
       left: 13px;
-      background: url("../../img/icons/pro-icon.svg") no-repeat;
+      background: url("../img/icons/pro-icon.svg") no-repeat;
       content: "";
     }
   }
