--- a/source/sass/blocks/hero.scss
+++ b/source/sass/blocks/hero.scss
@@ -15,14 +15,14 @@
     top: 167px;
     left: 20px;
     content: "";
-    background: url("../../img/index-can-mobile.png") no-repeat;
+    background: url("../img/index-can-mobile.png") no-repeat;
   }
 }
 
 .hero__content-wrapper {
   padding: 27px 35px 164px;
   background-color: rgba(104, 183, 56, 0.85);
-  background-image: url("../../img/green.png"), url("../../img/cat.png");
+  background-image: url("../img/green.png"), url("../img/cat.png");
   background-repeat: no-repeat, no-repeat;
 }
 
