--- a/source/sass/blocks/advantages.scss
+++ b/source/sass/blocks/advantages.scss
@@ -41,7 +41,7 @@
       height: 28px;
       top: 16px;
       left: -62px;
-      background: url("../../img/icons/benefit-icon.svg") no-repeat;
+      background: url("../img/icons/benefit-icon.svg") no-repeat;
       content: "";
     }
   }
@@ -53,7 +53,7 @@
       height: 29px;
       top: 16px;
       left: -62px;
-      background: url("../../img/icons/release-form-icon.svg") no-repeat;
+      background: url("../img/icons/release-form-icon.svg") no-repeat;
       content: "";
     }
   }
@@ -65,7 +65,7 @@
       height: 30px;
       top: 16px;
       left: -62px;
-      background: url("../../img/icons/replace-food-icon.svg") no-repeat;
+      background: url("../img/icons/replace-food-icon.svg") no-repeat;
       content: "";
     }
   }
@@ -77,7 +77,7 @@
       height: 31px;
       top: 16px;
       left: -62px;
-      background: url("../../img/icons/fast-result-icon.svg") no-repeat;
+      background: url("../img/icons/fast-result-icon.svg") no-repeat;
       content: "";
     }
   }
