--- a/source/sass/blocks/promotion.scss
+++ b/source/sass/blocks/promotion.scss
@@ -13,7 +13,7 @@
   color: #ffffff;
   line-height: 20px;
   background-color: rgba(104, 183, 56, 0.85);
-  background-image: url("../../img/green-catalog.png"), url("../../img/cat-carrier.jpg");
+  background-image: url("../img/green-catalog.png"), url("../img/cat-carrier.jpg");
   background-repeat: no-repeat, no-repeat;
 
   &::before {
@@ -23,6 +23,6 @@
     content: "";
     width: 78px;
     height: 80px;
-    background: url("../../img/icons/gift-icon.svg") no-repeat;
+    background: url("../img/icons/gift-icon.svg") no-repeat;
   }
 }
