--- a/3/css/style.css
+++ b/3/css/style.css
@@ -185,13 +185,13 @@ a {
   top: 167px;
   left: 20px;
   content: "";
-  background: url("../../img/index-can-mobile.png") no-repeat;
+  background: url("../img/index-can-mobile.png") no-repeat;
 }
 
 .hero__content-wrapper {
   padding: 27px 35px 164px;
   background-color: rgba(104, 183, 56, 0.85);
-  background-image: url("../../img/green.png"), url("../../img/cat.png");
+  background-image: url("../img/green.png"), url("../img/cat.png");
   background-repeat: no-repeat, no-repeat;
 }
 
@@ -251,7 +251,7 @@ a {
   height: 50px;
   top: 21px;
   left: 29px;
-  background: url("../../img/icons/slim-icon.svg") no-repeat;
+  background: url("../img/icons/slim-icon.svg") no-repeat;
   content: "";
 }
 .diet-card--pro::after {
@@ -260,7 +260,7 @@ a {
   height: 28px;
   top: 35px;
   left: 13px;
-  background: url("../../img/icons/pro-icon.svg") no-repeat;
+  background: url("../img/icons/pro-icon.svg") no-repeat;
   content: "";
 }
 
@@ -335,7 +335,7 @@ a {
   height: 28px;
   top: 16px;
   left: -62px;
-  background: url("../../img/icons/benefit-icon.svg") no-repeat;
+  background: url("../img/icons/benefit-icon.svg") no-repeat;
   content: "";
 }
 .advantages__item--release-form::after {
@@ -344,7 +344,7 @@ a {
   height: 29px;
   top: 16px;
   left: -62px;
-  background: url("../../img/icons/release-form-icon.svg") no-repeat;
+  background: url("../img/icons/release-form-icon.svg") no-repeat;
   content: "";
 }
 .advantages__item--replace-food::after {
@@ -353,7 +353,7 @@ a {
   height: 30px;
   top: 16px;
   left: -62px;
-  background: url("../../img/icons/replace-food-icon.svg") no-repeat;
+  background: url("../img/icons/replace-food-icon.svg") no-repeat;
   content: "";
 }
 .advantages__item--fast-result::after {
@@ -362,7 +362,7 @@ a {
   height: 31px;
   top: 16px;
   left: -62px;
-  background: url("../../img/icons/fast-result-icon.svg") no-repeat;
+  background: url("../img/icons/fast-result-icon.svg") no-repeat;
   content: "";
 }
 
@@ -648,7 +648,7 @@ a {
   color: #ffffff;
   line-height: 20px;
   background-color: rgba(104, 183, 56, 0.85);
-  background-image: url("../../img/green-catalog.png"), url("../../img/cat-carrier.jpg");
+  background-image: url("../img/green-catalog.png"), url("../img/cat-carrier.jpg");
   background-repeat: no-repeat, no-repeat;
 }
 .promotion__description::before {
@@ -658,7 +658,7 @@ a {
   content: "";
   width: 78px;
   height: 80px;
-  background: url("../../img/icons/gift-icon.svg") no-repeat;
+  background: url("../img/icons/gift-icon.svg") no-repeat;
 }
 
 .form-container {
