--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -17,6 +17,7 @@
 @use "blocks/invite-dealers.scss";
 @use "blocks/footer.scss";
 @use "blocks/social.scss";
+@use "blocks/visually-hidden.scss";
 
 //Блоки catalog
 @use "blocks/catalog.scss";
