Adds header, hero, nutrition adaptive grid in index

--- a/source/sass/blocks/advantages.scss
+++ b/source/sass/blocks/advantages.scss
@@ -21,7 +21,7 @@
 }
 
 .advantages__item {
-  @include site-content;
+  @include site-content(14px, 18px);
   position: relative;
   margin-left: 80px;
 
