--- a/source/sass/blocks/example.scss
+++ b/source/sass/blocks/example.scss
@@ -11,7 +11,7 @@
 }
 
 .example__text {
-  @include site-content;
+  @include site-content(14px, 18px);
   margin-bottom: 20px;
 }
 
@@ -31,9 +31,7 @@
 
 .example__weight,
 .example__time {
-  @include site-content;
-  font-size: 12px;
-  line-height: 12px;
+  @include site-content(12px, 12px);
 }
 
 .example__description {
