--- a/source/sass/blocks/hero.scss
+++ b/source/sass/blocks/hero.scss
@@ -1,4 +1,5 @@
 @use "../mixins.scss" as *;
+@use "../variables.scss" as *;
 
 .hero {
   display: flex;
@@ -20,15 +21,18 @@
 }
 
 .hero__content-wrapper {
+  display: flex;
+  flex-direction: column;
+  gap: 25px;
   padding: 27px 35px 164px;
   background-color: rgba(104, 183, 56, 0.85);
   background-image: url("../img/green.png"), url("../img/cat.png");
   background-repeat: no-repeat, no-repeat;
+  margin-bottom: 138px;
 }
 
 .hero__title {
   @include site-title(36px, 36px);
-  margin-bottom: 25px;
   text-align: center;
 }
 
@@ -42,14 +46,82 @@
   line-height: 14px;
 }
 
-.hero__decor-wrapper {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: flex-end;
-  flex-direction: column;
-  padding: 138px 20px 0;
+@media (min-width: $tablet-width) {
+  .hero {
+    margin: 0 30px;
+    min-height: 810px;
+
+    &::after {
+      width: 709px;
+      height: 609px;
+      top: 201px;
+      left: 0;
+    }
+  }
+
+  .hero__content-wrapper {
+    padding: 0 35px 0 88px;
+    gap: 40px;
+    margin-bottom: 49px;
+    color: #000000;
+    background-color: #ffffff;
+    background-image: none;
+  }
+
+  .hero__title {
+    @include site-title(60px, 60px);
+    text-align: start;
+  }
+
+  .hero__subtitle {
+    @include site-title(20px, 20px);
+    text-align: start;
+  }
 }
 
+@media (min-width: $desktop-width) {
+  .hero {
+    display: grid;
+    margin: 0;
+    margin-top: -140px;
+    grid-template-columns: 1fr 1fr;
+    min-height: 694px;
+
+    &::after {
+      width: 552px;
+      height: 499px;
+      top: 141px;
+      left: 558px;
+    }
+  }
+
+  .hero__content-wrapper {
+    align-self: end;
+    padding: 0;
+    padding-left: 190px;
+    margin-bottom: 52px;
+  }
+
+  .hero__decor-wrapper {
+    grid-row: 1/3;
+    grid-column: 2/3;
+    background-color: rgba(104, 183, 56, 0.85);
+    background-image: url("../img/green.png"), url("../img/cat.png");
+    background-repeat: no-repeat, no-repeat;
+  }
+
+  .hero__title {
+    grid-row: 1/2;
+    grid-column: 1/2;
+    margin-top: 223px;
+    z-index: 1;
+  }
+
+  .hero__subtitle {
+    grid-row: 2/3;
+    grid-column: 1/2;
+  }
+}
 
 // Второй вариант реализации декора банки
 // .hero__decor-wrapper {
