--- a/source/sass/blocks/main-nav.scss
+++ b/source/sass/blocks/main-nav.scss
@@ -1,4 +1,5 @@
 @use "../mixins.scss" as *;
+@use "../variables.scss" as *;
 
 .main-nav {
   display: flex;
@@ -9,16 +10,37 @@
 }
 
 .main-nav__link {
-  font-size: 20px;
-  line-height: 20px;
+  @include site-title(20px, 20px);
+  font-weight: 500;
   text-transform: uppercase;
   color: #000000;
 }
 
 .main-nav__toggle {
   cursor: pointer;
+}
 
-  &--hidden {
+@media (min-width: $tablet-width) {
+  .main-nav {
+    flex-direction: row;
+    justify-content: flex-end;
+    gap: 35px;
+    // padding-left: 90px;
+  }
+
+  .main-nav__link {
+    @include site-title(18px, 24px);
+  }
+
+  .main-nav__toggle {
     display: none;
+  }
+}
+
+@media (min-width: $desktop-width) {
+  .main-nav__link {
+    @include site-title(20px, 30px);
+    text-transform: uppercase;
+    color: #ffffff;
   }
 }
