--- a/source/sass/blocks/product-card.scss
+++ b/source/sass/blocks/product-card.scss
@@ -33,7 +33,7 @@
     }
 
     .product-card__subtitle {
-      @include site-content;
+      @include site-content(14px, 18px);
       margin-bottom: 21px;
     }
   }
