Completes yhe layout of the nutrition adaptive grid

--- a/source/sass/blocks/header.scss
+++ b/source/sass/blocks/header.scss
@@ -25,6 +25,6 @@
     background-color: transparent;
     min-height: 108px;
     margin: 0 110px;
-    padding: 53px 0 32px;
+    padding: 0;
   }
 }
