--- a/source/sass/blocks/hero.scss
+++ b/source/sass/blocks/hero.scss
@@ -82,8 +82,7 @@
 @media (min-width: $desktop-width) {
   .hero {
     display: grid;
-    margin: 0;
-    margin-top: -140px;
+    margin: -140px 0 82px;
     grid-template-columns: 1fr 1fr;
     min-height: 694px;
 
