--- a/source/sass/blocks/diet-card.scss
+++ b/source/sass/blocks/diet-card.scss
@@ -116,3 +116,59 @@
     color: #000000;
   }
 }
+
+@media (min-width: $desktop-width) {
+  .diet-card {
+    padding: 77px 62px 55px 52px;
+
+    &::before {
+      position: absolute;
+      top: 47px;
+      left: 52px;
+      width: 100px;
+      height: 100px;
+      background-color: $main-color;
+      border-radius: 50%;
+      content: "";
+    }
+
+    &--slim {
+      &::after {
+        position: absolute;
+        width: 70px;
+        height: 97px;
+        top: 41px;
+        left: 67px;
+        background: url("../img/icons/slim-icon.svg") no-repeat;
+        content: "";
+      }
+    }
+
+    &--pro {
+      &::after {
+        position: absolute;
+        width: 134px;
+        height: 56px;
+        top: 67px;
+        left: 33px;
+        background: url("../img/icons/pro-icon.svg") no-repeat;
+        content: "";
+      }
+    }
+  }
+
+  .diet-card__title {
+    margin: 0 0 73px 162px;
+  }
+
+  .diet-card__intro {
+    @include site-content (16px, 24px);
+    margin: 0;
+    margin-bottom: 23px;
+  }
+
+  .diet-card__link {
+    @include site-title(20px, 30px);
+    color: #000000;
+  }
+}
