--- a/source/sass/base/base.scss
+++ b/source/sass/base/base.scss
@@ -13,7 +13,7 @@ body {
   background-color: #ffffff;
   min-height: 100%;
   width: 320px;
-  margin: 0;
+  margin: 0 auto;
 }
 
 @media (min-width: $tablet-width) {
