--- a/source/sass/blocks/example.scss
+++ b/source/sass/blocks/example.scss
@@ -1,6 +1,9 @@
 @use "../mixins.scss" as *;
+@use "../variables.scss" as *;
 
 .example {
+  display: flex;
+  flex-direction: column;
   padding: 25px 20px 40px;
   background-color: #eaeaea;
 }
@@ -18,27 +21,158 @@
 .example__list-wrapper {
   display: flex;
   flex-wrap: wrap;
+  gap: 32px;
   justify-content: space-between;
+  align-items: center;
+}
+
+.example__expenses {
+  @include site-title(14px, 20px);
+  text-transform: uppercase;
+  margin: 0 auto;
 }
 
 .example__list {
   display: flex;
   flex-wrap: wrap;
   flex-direction: column-reverse;
+  padding: 14px 22px 0;
   align-items: center;
+  width: 124px;
+  min-height: 56px;
   margin: 0;
+  border: 1px solid  #cdcdcd;
+  border-radius: 5px;
+  box-sizing: border-box;
 }
 
 .example__weight,
 .example__time {
   @include site-content(12px, 12px);
+  text-align: center;
+  margin-bottom: -14px;
+  z-index: 1;
+  background-color: #eaeaea;
 }
 
 .example__description {
   @include site-title(24px, 24px);
+  margin-bottom: 7px;
+  text-align: center;
+  vertical-align: middle;
 }
 
 .example__slider {
   display: flex;
   flex-wrap: wrap;
 }
+
+@media (min-width: $tablet-width) {
+  .example {
+    position: relative;
+    padding: 0 30px;
+    background-color: transparent;
+  }
+
+  .example__expenses {
+    @include site-title(20px, 20px);
+    display: flex;
+    flex-direction: column;
+    gap: 9px;
+    align-items: flex-end;
+    margin: 0;
+    margin-left: auto;
+  }
+
+  .example__title {
+    @include site-title(60px, 60px);
+    margin-bottom: 63px;
+  }
+
+  .example__list-wrapper {
+    gap: 42px;
+    margin-bottom: 255px;
+  }
+
+  .example__list {
+    width: 162px;
+    min-height: 77px;
+    padding: 18px 8px 0;
+    justify-content: center;
+  }
+
+  .example__text {
+    @include site-content(16px, 24px);
+    margin-bottom: 54px;
+  }
+
+  .example__description {
+    @include site-title(30px, 37px);
+    margin-bottom: 11px;
+  }
+
+  .example__weight,
+  .example__time {
+    @include site-content(14px, 14px);
+    margin-bottom: -5px;
+    background-color: #ffffff;
+    padding: 0 9px;
+  }
+
+  .example__decor {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 462px;
+    background-color: #f2f2f2;
+    z-index: -1;
+  }
+}
+
+@media (min-width: $desktop-width) {
+  .example {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    padding: 0 110px;
+    background-color: transparent;
+  }
+
+  .example__title {
+    grid-column: 1/2;
+    margin: 0;
+    margin-bottom: 146px;
+  }
+
+  .example__expenses {
+    flex-direction: row;
+    gap: 63px;
+    margin: 0;
+    margin-top: 13px;
+  }
+
+  .example__list-wrapper {
+    grid-column: 1/2;
+    grid-row: 3/4;
+    padding-right: 244px;
+    margin-bottom: 75px;
+  }
+
+  .example__text {
+    grid-column: 1/2;
+    grid-row: 2/3;
+    padding-right: 177px;
+    margin-bottom: 69px;
+  }
+
+  .example__weight,
+  .example__time {
+    background-color: #f2f2f2;
+  }
+
+  .example__slider {
+    grid-row: 1/4;
+    grid-column: 2/3;
+  }
+}
+
