--- a/source/sass/blocks/main-nav.scss
+++ b/source/sass/blocks/main-nav.scss
@@ -25,7 +25,7 @@
     flex-direction: row;
     justify-content: flex-end;
     gap: 35px;
-    // padding-left: 90px;
+    // margin-left: 90px;
   }
 
   .main-nav__link {
