--- a/source/sass/blocks/diet-card.scss
+++ b/source/sass/blocks/diet-card.scss
@@ -4,7 +4,7 @@
 .diet-card {
   position: relative;
   padding: 30px 33px 18px 20px;
-  background-color: #f2f2f2;
+  background-color: $bgcolor-secondary;
 
   &::before {
     position: absolute;
