--- a/source/sass/blocks/example.scss
+++ b/source/sass/blocks/example.scss
@@ -125,7 +125,7 @@
     left: 0;
     width: 100%;
     height: 462px;
-    background-color: #f2f2f2;
+    background-color: $bgcolor-secondary;
     z-index: -1;
   }
 }
@@ -167,7 +167,7 @@
 
   .example__weight,
   .example__time {
-    background-color: #f2f2f2;
+    background-color: $bgcolor-secondary;
   }
 
   .example__slider {
