--- a/source/sass/blocks/footer.scss
+++ b/source/sass/blocks/footer.scss
@@ -1,3 +1,5 @@
+@use "../variables.scss" as *;
+
 .footer {
   display: flex;
   flex-wrap: wrap;
@@ -5,7 +7,7 @@
   align-items: center;
   gap: 40px;
   padding: 40px 20px;
-  background-color: #f2f2f2;
+  background-color: $bgcolor-secondary;
 }
 
 .footer__academy-logo-wrapper {
