--- a/source/sass/blocks/hero.scss
+++ b/source/sass/blocks/hero.scss
@@ -1,7 +1,8 @@
 @use "../mixins.scss" as *;
 @use "../variables.scss" as *;
 
-.hero {
+.hero__container {
+  @include site-container;
   display: flex;
   flex-wrap: wrap;
   flex-direction: column;
@@ -18,69 +19,21 @@
     content: "";
     background: url("../img/index-can-mobile.png") no-repeat;
   }
-}
 
-.hero__content-wrapper {
-  display: flex;
-  flex-direction: column;
-  gap: 25px;
-  padding: 27px 35px 164px;
-  background-color: rgba(104, 183, 56, 0.85);
-  background-image: url("../img/green.png"), url("../img/cat.png");
-  background-repeat: no-repeat, no-repeat;
-  margin-bottom: 138px;
-}
-
-.hero__title {
-  @include site-title(36px, 36px);
-  text-align: center;
-}
-
-.hero__subtitle {
-  margin: 0;
-  text-align: center;
-  text-transform: uppercase;
-  font-family: inherit;
-  font-size: 14px;
-  font-weight: 400;
-  line-height: 14px;
-}
-
-@media (min-width: $tablet-width) {
-  .hero {
-    margin: 0 30px;
+  @media (min-width: $tablet-width) {
+    margin: 0;
     min-height: 810px;
 
     &::after {
       width: 709px;
       height: 609px;
-      top: 201px;
+      top: 263px;
       left: 0;
+      background: url("../img/index-can-tablet1.png") no-repeat;
     }
   }
 
-  .hero__content-wrapper {
-    padding: 0 35px 0 88px;
-    gap: 40px;
-    margin-bottom: 49px;
-    color: #000000;
-    background-color: #ffffff;
-    background-image: none;
-  }
-
-  .hero__title {
-    @include site-title(60px, 60px);
-    text-align: start;
-  }
-
-  .hero__subtitle {
-    @include site-title(20px, 20px);
-    text-align: start;
-  }
-}
-
-@media (min-width: $desktop-width) {
-  .hero {
+  @media (min-width: $desktop-width) {
     display: grid;
     margin: -140px 0 82px;
     grid-template-columns: 1fr 1fr;
@@ -91,16 +44,76 @@
       height: 499px;
       top: 141px;
       left: 558px;
+      background: url("../img/index-can.png") no-repeat;
     }
   }
+}
 
-  .hero__content-wrapper {
+.hero__content-wrapper {
+  display: flex;
+  flex-direction: column;
+  gap: 25px;
+  padding: 27px 5px 164px;
+  background-color: rgba(104, 183, 56, 0.85);
+  background-image: url("../img/green.png"), url("../img/cat.png");
+  background-repeat: no-repeat, no-repeat;
+  margin-bottom: 138px;
+
+  @media (min-width: $tablet-width) {
+    padding: 62px 35px 0 88px;
+    gap: 40px;
+    margin-bottom: 49px;
+    color: #000000;
+    background-color: #ffffff;
+    background-image: none;
+  }
+
+  @media (min-width: $desktop-width) {
     align-self: end;
     padding: 0;
     padding-left: 190px;
     margin-bottom: 52px;
   }
+}
 
+.hero__title {
+  @include site-title(36px, 36px);
+  text-align: center;
+
+  @media (min-width: $tablet-width) {
+    @include site-title(60px, 60px);
+    text-align: start;
+  }
+
+  @media (min-width: $desktop-width) {
+    grid-row: 1/2;
+    grid-column: 1/2;
+    margin-top: 223px;
+    z-index: 1;
+  }
+}
+
+.hero__subtitle {
+  margin: 0;
+  text-align: center;
+  text-transform: uppercase;
+  font-family: inherit;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 14px;
+
+  @media (min-width: $tablet-width) {
+    @include site-title(20px, 20px);
+    text-align: start;
+  }
+
+  @media (min-width: $desktop-width) {
+    grid-row: 2/3;
+    grid-column: 1/2;
+  }
+}
+
+@media (min-width: $desktop-width) {
   .hero__decor-wrapper {
     grid-row: 1/3;
     grid-column: 2/3;
@@ -108,27 +121,74 @@
     background-image: url("../img/green.png"), url("../img/cat.png");
     background-repeat: no-repeat, no-repeat;
   }
-
-  .hero__title {
-    grid-row: 1/2;
-    grid-column: 1/2;
-    margin-top: 223px;
-    z-index: 1;
-  }
-
-  .hero__subtitle {
-    grid-row: 2/3;
-    grid-column: 1/2;
-  }
 }
 
-// Второй вариант реализации декора банки
-// .hero__decor-wrapper {
-//   display: flex;
-//   justify-content: flex-end;
-//   flex-direction: column;
-//   margin-top: -135px;
-//   padding: 0 20px;
-//   min-height: 313px;
-//   background: url("../../img/index-can-mobile.png") no-repeat top center;
+// @media (min-width: $tablet-width) {
+//   .hero__container {
+//     margin: 0;
+//     min-height: 810px;
+
+//     &::after {
+//       width: 709px;
+//       height: 609px;
+//       top: 201px;
+//       left: 0;
+//       background: url("../img/index-can-tablet1.png") no-repeat;
+//     }
+//   }
+
+//   .hero__content-wrapper {
+//     padding: 62px 35px 0 88px;
+//     gap: 40px;
+//     margin-bottom: 49px;
+//     color: #000000;
+//     background-color: #ffffff;
+//     background-image: none;
+//   }
+
+//   .hero__title {
+//     @include site-title(60px, 60px);
+//     text-align: start;
+//   }
+
+//   .hero__subtitle {
+//     @include site-title(20px, 20px);
+//     text-align: start;
+//   }
+// }
+
+// @media (min-width: $desktop-width) {
+//   .hero__container {
+//     display: grid;
+//     margin: -140px 0 82px;
+//     grid-template-columns: 1fr 1fr;
+//     min-height: 694px;
+
+//     &::after {
+//       width: 552px;
+//       height: 499px;
+//       top: 141px;
+//       left: 558px;
+//     }
+//   }
+
+//   .hero__content-wrapper {
+//     align-self: end;
+//     padding: 0;
+//     padding-left: 190px;
+//     margin-bottom: 52px;
+//   }
+
+
+//   .hero__title {
+//     grid-row: 1/2;
+//     grid-column: 1/2;
+//     margin-top: 223px;
+//     z-index: 1;
+//   }
+
+//   .hero__subtitle {
+//     grid-row: 2/3;
+//     grid-column: 1/2;
+//   }
 // }
