--- a/source/sass/blocks/button.scss
+++ b/source/sass/blocks/button.scss
@@ -17,11 +17,37 @@
   line-height: 20px;
   height: 40px;
 
+  @media (min-width: $tablet-width) {
+    font-size: 20px;
+  }
+
   &--program {
     padding: 10px 44px;
     font-size: 14px;
     line-height: 18px;
     height: 40px;
+
+    @media (min-width: $tablet-width) {
+      font-size: 20px;
+      z-index: 1;
+      width: 244px;
+      height: 54px;
+      padding: 14px 26px;
+      line-height: 20px;
+      margin-left: 91px;
+    }
+
+    @media (min-width: $desktop-width) {
+      z-index: 0;
+      grid-row: 2/3;
+      grid-column: 1/2;
+      width: 244px;
+      height: 54px;
+      padding: 14px 26px;
+      line-height: 20px;
+      margin-left: 80px;
+      margin-bottom: 185px;
+    }
   }
 
   &--secondary {
@@ -35,35 +61,35 @@
   }
 }
 
-@media (min-width: $tablet-width) {
-  .button {
-    font-size: 20px;
+// @media (min-width: $tablet-width) {
+//   .button {
+//     font-size: 20px;
 
-    &--program {
-      z-index: 1;
-      width: 244px;
-      height: 54px;
-      padding: 14px 26px;
-      line-height: 20px;
-      margin-left: 91px;
-    }
-  }
-}
+//     &--program {
+//       z-index: 1;
+//       width: 244px;
+//       height: 54px;
+//       padding: 14px 26px;
+//       line-height: 20px;
+//       margin-left: 91px;
+//     }
+//   }
+// }
 
-@media (min-width: $desktop-width) {
-  .button {
-    font-size: 20px;
+// @media (min-width: $desktop-width) {
+//   .button {
+//     font-size: 20px;
 
-    &--program {
-      z-index: 0;
-      grid-row: 2/3;
-      grid-column: 1/2;
-      width: 244px;
-      height: 54px;
-      padding: 14px 26px;
-      line-height: 20px;
-      margin-left: 190px;
-      margin-bottom: 185px;
-    }
-  }
-}
+//     &--program {
+//       z-index: 0;
+//       grid-row: 2/3;
+//       grid-column: 1/2;
+//       width: 244px;
+//       height: 54px;
+//       padding: 14px 26px;
+//       line-height: 20px;
+//       margin-left: 190px;
+//       margin-bottom: 185px;
+//     }
+//   }
+// }
